fix typos in homepage

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -15,8 +15,8 @@ de:
       sign_in: "Einloggen"
       calcometer_screenshot: "Screenshot der Calcometer-Homepage"
       why_calcometer: "Warum Calcometer?"
-      distance_management: "Automatisches Entfernungsmanagement"
-      distance_management_desc: "Automatische Berechnung von Entfernung und Zeit zwischen Patienten oder Kunden."
+      distance_management: "Berechnung der Entfernung"
+      distance_management_desc: "Automatische Berechnung der Fahrstrecke und -dauer zwischen Patienten oder Kunden."
       safe_by_design: "Sicher durch Design"
       safe_by_design_desc: "Ihre Daten werden verschlüsselt und sicher in der Cloud gespeichert."
       clutter_free_design: "Minimalistisches Design"
