--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -15,8 +15,8 @@ en:
       sign_in: "Sign In"
       calcometer_screenshot: "Calcometer homepage screenshot"
       why_calcometer: "Why Calcometer?"
-      distance_management: "Automatic distance management"
-      distance_management_desc: "Automatic calculation of distance and time between patients or clients automatically."
+      distance_management: "Distance calculation"
+      distance_management_desc: "Automatic calculation of driving distance and duration between patients or clients."
       safe_by_design: "Safe by design"
       safe_by_design_desc: "Your data is encrypted and stored safely in the cloud."
       clutter_free_design: "Minimalist design"
