--- a/config/locales/views/pages/it.yml
+++ b/config/locales/views/pages/it.yml
@@ -15,8 +15,8 @@ it:
       sign_in: "Accedi"
       calcometer_screenshot: "Screenshot della homepage di Calcometer"
       why_calcometer: "Perché Calcometer?"
-      distance_management: "Gestione automatica delle distanze"
-      distance_management_desc: "Calcolo automatico di distanza e tempo tra pazienti o clienti in modo automatico."
+      distance_management: "Calcolo della distanza"
+      distance_management_desc: "Calcolo automatico della distanza e della durata del viaggio tra i pazienti o i clienti."
       safe_by_design: "Sicuro di design"
       safe_by_design_desc: "I tuoi dati sono crittografati e archiviati in modo sicuro nel cloud."
       clutter_free_design: "Design minimalista"
