--- a/config/locales/views/pages/fr.yml
+++ b/config/locales/views/pages/fr.yml
@@ -15,8 +15,8 @@ fr:
       sign_in: "Se connecter"
       calcometer_screenshot: "Capture d'écran de la page d'accueil de Calcometer"
       why_calcometer : "Pourquoi Calcometer ?"
-      distance_management : "Gestion automatique de la distance"
-      distance_management_desc : "Calcul automatique de la distance et du temps entre les patients ou les clients."
+      distance_management : "Calcul de la distance"
+      distance_management_desc : "Calcul automatique de la distance et de la durée du trajet entre les patients ou les clients."
       safe_by_design : "Sécurité dès la conception."
       safe_by_design_desc : "Vos données sont cryptées et stockées en toute sécurité dans le cloud."
       clutter_free_design : "Conception minimaliste"
