add button modal with tutorial video on how to use calcometer & keys translations

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -8,6 +8,8 @@ de:
       patients: "Alle Patienten"
       export_data: "Termine exportieren"
       share_feedback: "Mein Kommentar teilen"
+      walkthrough_video: "Videoanleitung"
+      close_modal: "Dieses Fenster schließen"
       calcometer: "Calcometer"
       tagline: "Termine, Entfernungen und Reisezeiten mit Leichtigkeit."
       features: "App-Funktionen"
