add walkthrough video in navbar for not signed in users

--- a/config/locales/views/shared/navbar.fr.yml
+++ b/config/locales/views/shared/navbar.fr.yml
@@ -12,3 +12,4 @@ fr:
       log_in: "Connexion"
       sign_up: "S'inscrire"
       language: "Langue"
+      walkthrough_video: "Comment utiliser Calcometer"
